
name:                HPLAR
version:             0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
      Ch1
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010